[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_tools"
version = "0.1.0"
description = "A simple package with utilities regarding working with pdfs"

readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "click==8.1.8",
    "PyMuPDF==1.25.3",
    "reportlab==4.3.1",
    "lorem==0.1.1"
]

[project.scripts]
pdf_tools = "pdf_tools.app:cli"


[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_tools*"]